--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -107,11 +107,14 @@
     color: rgb(90, 90, 90);
     
 }
+.btn-mark:active {
+    outline: none;
+}
 .btn-mark:hover {
     color: rgb(9, 76, 139);
 }
 
-.text-hover:hover {
+.bold-gray:hover {
     color: rgb(1, 62, 120)
 }
 .active {
